pdf export and readme

--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
 - <span class="var-author"></span>
 - <span class="var-venue"></span> − <span class="var-date"></span>
 
+# {no-print}
+
             </section>
 
             <!-- footer and other decorations -->
